Update Gradle Version And config maven group

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
-apply plugin: 'application'
+apply plugin: 'java-library'
+apply plugin: 'maven-publish'
+
+group = 'io.github.fernandogodoy'
+version = '0.0.1'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
@@ -18,4 +23,25 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+task sourcesJar(type: Jar) {
+    archiveClassifier = 'sources'
+    from sourceSets.main.allJava
+}
+
+task javadocJar(type: Jar) {
+    archiveClassifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+
+            artifact sourcesJar
+            artifact javadocJar
+        }
+    }
 }
